<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_option">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="auto_mount_on_boot"
            android:summary="@string/auto_mount_on_boot_summary"
            android:title="@string/auto_mount_on_boot"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/mount_option">
        <MultiSelectListPreference
            android:defaultValue="@array/version_optuons_values_default"
            android:entries="@array/version_options"
            android:entryValues="@array/version_options_values"
            android:key="mount_version"
            android:summary="@string/version_option_summary"
            android:title="@string/version_option"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_tmpfs"
            android:summary="@string/use_tmpfs_summary"
            android:title="@string/use_tmpfs"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="disable_other_effects"
            android:summary="@string/disable_other_effects_summary"
            android:title="@string/disable_other_effects"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="disable_other_effects"
            android:key="trim_useless_blocks"
            android:summary="@string/trim_useless_blocks_summary"
            android:title="@string/trim_useless_blocks"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="patch_audio_policy"
            android:summary="@string/patch_audio_policy_summary"
            android:title="@string/patch_audio_policy"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/selinux_option">
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/selinux_options"
            android:entries="@array/selinux_options"
            android:entryValues="@array/selinux_options_values"
            android:key="selinux_option"
            android:summary="@string/selinux_options_summary"
            android:title="@string/selinux_options"/>
    </PreferenceCategory>
</PreferenceScreen>
