<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:indeterminate="true"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mount_point_statu"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/viperfx_driver_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fx_driver_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xhifi_driver_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/mount_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unmounted"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/viperfx_driver_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/unloaded"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/fx_driver_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unloaded"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/xhifi_driver_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unloaded"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onSettingButtonClicked"
                android:text="@string/options"/>

            <Button
                android:id="@+id/apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onApplyButtonClicked"
                android:text="@string/mount_and_restart_media"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>

